feat: 实现音频播放

--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -8,6 +8,18 @@
       "phone",
       "tablet"
     ],
+    "requestPermissions": [
+      {
+        "name" : "ohos.permission.INTERNET",
+        "reason": "$string:reason",
+        "usedScene": {
+          "abilities": [
+            "EntryAbility"
+          ],
+          "when":"always"
+        }
+      }
+    ],
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
