feat: 音频录制功能持续开发

--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -11,7 +11,15 @@
     "requestPermissions": [
       {
         "name" : "ohos.permission.INTERNET",
-        "reason": "$string:reason",
+        "usedScene": {
+          "abilities": [
+            "EntryAbility"
+          ],
+          "when":"always"
+        }
+      },
+      {
+        "name": "ohos.permission.MICROPHONE",
         "usedScene": {
           "abilities": [
             "EntryAbility"
