--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -26,6 +26,15 @@
           ],
           "when":"always"
         }
+      },
+      {
+        "name": "ohos.permission.READ_MEDIA",
+        "usedScene": {
+          "abilities": [
+            "EntryAbility"
+          ],
+          "when":"always"
+        }
       }
     ],
     "deliveryWithInstall": true,
